--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eat the World</title>
+    <script src="https://cdn.jsdelivr.net/npm/break_infinity.js@2"></script>
+    <script src="//cdn.rawgit.com/erosson/swarm-numberformat/v0.4.0/dist/swarm-numberformat.min.js"></script>
   </head>
   <body>
-    <div id="app"></div>
-    This is a text
+    <div id="app"></div>    
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
