--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eat the World</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Creepster">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <script src="https://cdn.jsdelivr.net/npm/break_infinity.js@2"></script>
     <script src="//cdn.rawgit.com/erosson/swarm-numberformat/v0.4.0/dist/swarm-numberformat.min.js"></script>
   </head>
