too many to count

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Creepster">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <script src="https://cdn.jsdelivr.net/npm/break_infinity.js@2"></script>
-    <script src="src\assets\swarm-numberformat.min.js"></script>
+    <script src="src\assets\js\swarm-numberformat.min.js"></script>
   </head>
   <body>
     <div id="app"></div>    
